// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description="Upload results to Munro, the Fast and Easy Results System for Orienteering Leagues. A simple way to calculate the results for orienteering leagues, with search and sort features"
    head="[object Object]"
    title="Munro - Upload Results"
    url="https://munro-leagues.herokuapp.com/upload"
  />
   
  <h1
    class="text-main text-3xl font-normal font-heading mb-2"
  >
    
    Upload Results
  
  </h1>
   
  <div
    class="card-color mt-2 mb-4"
  >
    <p>
      
      For instructions on how to upload results please visit
      
      <router-link-stub
        class="link inline text-white ml-1"
        to="/upload-instructions"
      >
        
        /upload-instructions
      
      </router-link-stub>
    </p>
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Event ID:
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="text"
    />
  </div>
   
  <p
    class="mb-3"
    style="display: none;"
  >
    <b>
      Event Name:
    </b>
    
    
  
  </p>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Upload Key:
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="text"
    />
  </div>
   
  <!---->
   
  <div
    class="file-input relative top--4"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3  pb-0"
    >
      Results File:
    </label>
     
    <p
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none truncate"
    >
      
    Select a File
    
      <label
        class="absolute right-0 px-4 border-l border-r border-main rounded-shape text-white bg-main hover:text-main hover:bg-white py-2 mt--2 font-heading inline-block"
        for="file"
      >
        Browse for File
      </label>
       
      <input
        accept=".csv"
        class="hidden"
        id="file"
        type="file"
      />
    </p>
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Results (URL):
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="url"
    />
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Routegadget (URL):
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="url"
    />
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Winsplits: (URL):
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="url"
    />
  </div>
   
  <!---->
</div>
`;

exports[`Upload Buttons Shows Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description="Upload results to Munro, the Fast and Easy Results System for Orienteering Leagues. A simple way to calculate the results for orienteering leagues, with search and sort features"
    head="[object Object]"
    title="Munro - Upload Results"
    url="https://munro-leagues.herokuapp.com/upload"
  />
   
  <h1
    class="text-main text-3xl font-normal font-heading mb-2"
  >
    
    Upload Results
  
  </h1>
   
  <div
    class="card-color mt-2 mb-4"
  >
    <p>
      
      For instructions on how to upload results please visit
      
      <router-link-stub
        class="link inline text-white ml-1"
        to="/upload-instructions"
      >
        
        /upload-instructions
      
      </router-link-stub>
    </p>
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Event ID:
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="text"
    />
  </div>
   
  <p
    class="mb-3"
    style="display: none;"
  >
    <b>
      Event Name:
    </b>
    
    
  
  </p>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Upload Key:
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="text"
    />
  </div>
   
  <!---->
   
  <div
    class="file-input relative top--4"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3  pb-0"
    >
      Results File:
    </label>
     
    <p
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none truncate"
    >
      
    Select a File
    
      <label
        class="absolute right-0 px-4 border-l border-r border-main rounded-shape text-white bg-main hover:text-main hover:bg-white py-2 mt--2 font-heading inline-block"
        for="file"
      >
        Browse for File
      </label>
       
      <input
        accept=".csv"
        class="hidden"
        id="file"
        type="file"
      />
    </p>
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Results (URL):
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="url"
    />
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Routegadget (URL):
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="url"
    />
  </div>
   
  <div
    class="text-input top--4 relative"
  >
    <label
      class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
    >
      Winsplits: (URL):
    </label>
     
    <input
      class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
      type="url"
    />
  </div>
   
  <button
    class="button-lg"
  >
    
    Upload File
  
  </button>
</div>
`;
